src/antlr/AngularParser.java
// Generated from C:/Users/ROG STRIX/IdeaProjects/Compiler1ProjectComplete/src/antlr/AngularParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, FROM=2, COMPONENT=3, INJECTABLE=4, EXPORT=5, CLASS=6, SELECTOR=7, 
		STANDALONE=8, IMPORTS=9, STYLEURL=10, TEMPLATEURL=11, TEMPLATE=12, PROVIDEDIN=13, 
		INTERFACE=14, PIXIL=15, STYLE=16, CLICK=17, AUTO=18, SRC=19, ALT=20, IF=21, 
		IMG=22, TYPE=23, INPUT=24, PLACEHOLDER=25, LBRACE=26, RBRACE=27, LBRACK=28, 
		RBRACK=29, LPAREN=30, RPAREN=31, COLON=32, SEMI=33, COMMA=34, DOT=35, 
		ASSIGN=36, QUOTE=37, DQUOTE=38, PERCENT=39, BACKTICK=40, EXCLAMATION=41, 
		QUESTION=42, WS=43, BOOLEAN=44, RETURN=45, STRING=46, IDENTIFIER=47, NUMBER=48, 
		TAG_OPEN=49, TAG_CLOSE=50, SLASH=51, HEXADECIMALCOLOR=52, ATTR_NAME=53, 
		ATTR_VALUE=54, OPERATION=55;
	public static final int
		RULE_app = 0, RULE_appContent = 1, RULE_interfaceDecl = 2, RULE_importStatement = 3, 
		RULE_importItems = 4, RULE_serviceDecl = 5, RULE_componentDecl = 6, RULE_componentdata = 7, 
		RULE_selector = 8, RULE_standalone = 9, RULE_imports = 10, RULE_styleUrls = 11, 
		RULE_templateUrl = 12, RULE_templateDecl = 13, RULE_html = 14, RULE_imageTag = 15, 
		RULE_inputTag = 16, RULE_completeTag = 17, RULE_openTag = 18, RULE_attributeHTML = 19, 
		RULE_styling = 20, RULE_styleElement = 21, RULE_styleAssign = 22, RULE_styleNumber = 23, 
		RULE_styleColor = 24, RULE_extention = 25, RULE_styleOnly = 26, RULE_click = 27, 
		RULE_src = 28, RULE_srcFunc = 29, RULE_alt = 30, RULE_altFunc = 31, RULE_starEle = 32, 
		RULE_type = 33, RULE_bracket2Ele = 34, RULE_bracket1Ele = 35, RULE_questionEle = 36, 
		RULE_placeholder = 37, RULE_tagBody = 38, RULE_closeTag = 39, RULE_commentTag = 40, 
		RULE_expression = 41, RULE_dotIdentifier = 42, RULE_classDecl = 43, RULE_classBody = 44, 
		RULE_variableDecl = 45, RULE_arrayDecl = 46, RULE_functionDecl = 47, RULE_paramList = 48, 
		RULE_parameter = 49, RULE_functionCall = 50, RULE_functionCallBody = 51, 
		RULE_expressionBody = 52, RULE_bracketBody = 53, RULE_body = 54, RULE_special = 55, 
		RULE_functionBody = 56, RULE_returnStmt = 57, RULE_statement = 58, RULE_assignStatement = 59, 
		RULE_plusStatement = 60, RULE_ifStatement = 61, RULE_ifCondition = 62, 
		RULE_ifBody = 63;
	private static String[] makeRuleNames() {
		return new String[] {
			"app", "appContent", "interfaceDecl", "importStatement", "importItems", 
			"serviceDecl", "componentDecl", "componentdata", "selector", "standalone", 
			"imports", "styleUrls", "templateUrl", "templateDecl", "html", "imageTag", 
			"inputTag", "completeTag", "openTag", "attributeHTML", "styling", "styleElement", 
			"styleAssign", "styleNumber", "styleColor", "extention", "styleOnly", 
			"click", "src", "srcFunc", "alt", "altFunc", "starEle", "type", "bracket2Ele", 
			"bracket1Ele", "questionEle", "placeholder", "tagBody", "closeTag", "commentTag", 
			"expression", "dotIdentifier", "classDecl", "classBody", "variableDecl", 
			"arrayDecl", "functionDecl", "paramList", "parameter", "functionCall", 
			"functionCallBody", "expressionBody", "bracketBody", "body", "special", 
			"functionBody", "returnStmt", "statement", "assignStatement", "plusStatement", 
			"ifStatement", "ifCondition", "ifBody"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'from'", "'@Component'", "'@Injectable'", "'export'", 
			"'class'", "'selector'", "'standalone'", "'imports'", "'styleUrls'", 
			"'templateUrl'", "'template'", "'providedIn'", "'interface'", "'px'", 
			"'style'", "'click'", "'auto'", "'src'", "'alt'", "'if'", "'img'", "'type'", 
			"'input'", "'placeholder'", "'{'", "'}'", "'['", "']'", "'('", "')'", 
			"':'", "';'", "','", "'.'", "'='", "'''", "'\"'", "'%'", "'`'", "'!'", 
			"'?'", null, null, "'return'", null, null, null, "'<'", "'>'", "'/'", 
			"'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "FROM", "COMPONENT", "INJECTABLE", "EXPORT", "CLASS", 
			"SELECTOR", "STANDALONE", "IMPORTS", "STYLEURL", "TEMPLATEURL", "TEMPLATE", 
			"PROVIDEDIN", "INTERFACE", "PIXIL", "STYLE", "CLICK", "AUTO", "SRC", 
			"ALT", "IF", "IMG", "TYPE", "INPUT", "PLACEHOLDER", "LBRACE", "RBRACE", 
			"LBRACK", "RBRACK", "LPAREN", "RPAREN", "COLON", "SEMI", "COMMA", "DOT", 
			"ASSIGN", "QUOTE", "DQUOTE", "PERCENT", "BACKTICK", "EXCLAMATION", "QUESTION", 
			"WS", "BOOLEAN", "RETURN", "STRING", "IDENTIFIER", "NUMBER", "TAG_OPEN", 
			"TAG_CLOSE", "SLASH", "HEXADECIMALCOLOR", "ATTR_NAME", "ATTR_VALUE", 
			"OPERATION"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AppContext extends ParserRuleContext {
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<AppContentContext> appContent() {
			return getRuleContexts(AppContentContext.class);
		}
		public AppContentContext appContent(int i) {
			return getRuleContext(AppContentContext.class,i);
		}
		public AppContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_app; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterApp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitApp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitApp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AppContext app() throws RecognitionException {
		AppContext _localctx = new AppContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_app);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(128);
				importStatement();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 16440L) != 0)) {
				{
				{
				setState(134);
				appContent();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AppContentContext extends ParserRuleContext {
		public AppContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_appContent; }
	 
		public AppContentContext() { }
		public void copyFrom(AppContentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AppServiceContext extends AppContentContext {
		public ServiceDeclContext serviceDecl() {
			return getRuleContext(ServiceDeclContext.class,0);
		}
		public AppServiceContext(AppContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterAppService(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitAppService(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitAppService(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AppClassContext extends AppContentContext {
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public AppClassContext(AppContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterAppClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitAppClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitAppClass(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AppComponentContext extends AppContentContext {
		public ComponentDeclContext componentDecl() {
			return getRuleContext(ComponentDeclContext.class,0);
		}
		public AppComponentContext(AppContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterAppComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitAppComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitAppComponent(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AppInterfaceContext extends AppContentContext {
		public InterfaceDeclContext interfaceDecl() {
			return getRuleContext(InterfaceDeclContext.class,0);
		}
		public AppInterfaceContext(AppContentContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterAppInterface(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitAppInterface(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitAppInterface(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AppContentContext appContent() throws RecognitionException {
		AppContentContext _localctx = new AppContentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_appContent);
		try {
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INTERFACE:
				_localctx = new AppInterfaceContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				interfaceDecl();
				}
				break;
			case COMPONENT:
				_localctx = new AppComponentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				componentDecl();
				}
				break;
			case INJECTABLE:
				_localctx = new AppServiceContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				serviceDecl();
				}
				break;
			case EXPORT:
				_localctx = new AppClassContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(143);
				classDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDeclContext extends ParserRuleContext {
		public TerminalNode INTERFACE() { return getToken(AngularParser.INTERFACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AngularParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(AngularParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AngularParser.RBRACE, 0); }
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(AngularParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(AngularParser.SEMI, i);
		}
		public InterfaceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterInterfaceDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitInterfaceDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitInterfaceDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceDeclContext interfaceDecl() throws RecognitionException {
		InterfaceDeclContext _localctx = new InterfaceDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_interfaceDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(INTERFACE);
			setState(147);
			match(IDENTIFIER);
			setState(148);
			match(LBRACE);
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(149);
				parameter();
				setState(150);
				match(SEMI);
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(157);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AngularParser.IMPORT, 0); }
		public TerminalNode LBRACE() { return getToken(AngularParser.LBRACE, 0); }
		public ImportItemsContext importItems() {
			return getRuleContext(ImportItemsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(AngularParser.RBRACE, 0); }
		public TerminalNode FROM() { return getToken(AngularParser.FROM, 0); }
		public TerminalNode STRING() { return getToken(AngularParser.STRING, 0); }
		public TerminalNode SEMI() { return getToken(AngularParser.SEMI, 0); }
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(IMPORT);
			setState(160);
			match(LBRACE);
			setState(161);
			importItems();
			setState(162);
			match(RBRACE);
			setState(163);
			match(FROM);
			setState(164);
			match(STRING);
			setState(165);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportItemsContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(AngularParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(AngularParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public ImportItemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importItems; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportItems(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportItems(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportItems(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportItemsContext importItems() throws RecognitionException {
		ImportItemsContext _localctx = new ImportItemsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importItems);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(IDENTIFIER);
			setState(172);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(168);
				match(COMMA);
				setState(169);
				match(IDENTIFIER);
				}
				}
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ServiceDeclContext extends ParserRuleContext {
		public TerminalNode INJECTABLE() { return getToken(AngularParser.INJECTABLE, 0); }
		public TerminalNode LPAREN() { return getToken(AngularParser.LPAREN, 0); }
		public TerminalNode PROVIDEDIN() { return getToken(AngularParser.PROVIDEDIN, 0); }
		public TerminalNode COLON() { return getToken(AngularParser.COLON, 0); }
		public TerminalNode STRING() { return getToken(AngularParser.STRING, 0); }
		public TerminalNode RPAREN() { return getToken(AngularParser.RPAREN, 0); }
		public ServiceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_serviceDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterServiceDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitServiceDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitServiceDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ServiceDeclContext serviceDecl() throws RecognitionException {
		ServiceDeclContext _localctx = new ServiceDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_serviceDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(175);
			match(INJECTABLE);
			setState(176);
			match(LPAREN);
			setState(177);
			match(PROVIDEDIN);
			setState(178);
			match(COLON);
			setState(179);
			match(STRING);
			setState(180);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentDeclContext extends ParserRuleContext {
		public TerminalNode COMPONENT() { return getToken(AngularParser.COMPONENT, 0); }
		public TerminalNode LPAREN() { return getToken(AngularParser.LPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(AngularParser.LBRACE, 0); }
		public List<ComponentdataContext> componentdata() {
			return getRuleContexts(ComponentdataContext.class);
		}
		public ComponentdataContext componentdata(int i) {
			return getRuleContext(ComponentdataContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(AngularParser.RBRACE, 0); }
		public TerminalNode RPAREN() { return getToken(AngularParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public ComponentDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_componentDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterComponentDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitComponentDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitComponentDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentDeclContext componentDecl() throws RecognitionException {
		ComponentDeclContext _localctx = new ComponentDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_componentDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(COMPONENT);
			setState(183);
			match(LPAREN);
			setState(184);
			match(LBRACE);
			setState(185);
			componentdata();
			setState(190);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(186);
				match(COMMA);
				setState(187);
				componentdata();
				}
				}
				setState(192);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(193);
			match(RBRACE);
			setState(194);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
